Rename sample code file

--- a/Tutorials/SampleCodes/s2e-user/CMakeLists.txt
+++ b/Tutorials/SampleCodes/s2e-user/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_policy(SET CMP0048 NEW)
 project(S2E_USER
   LANGUAGES CXX
   DESCRIPTION "s2e-user: A sample of S2E User Side"
-  VERSION 5.0.0
+  VERSION 6.0.0
 )
 
 cmake_minimum_required(VERSION 3.13)
@@ -40,10 +40,9 @@ if(USE_C2A)
   add_definitions(-DSILS_FW)
   #include_directories of C2A
   include_directories(${C2A_DIR}/src)
-  include_directories(${S2E_CORE_DIR}/src/Interface/SpacecraftInOut)
+  include_directories(${S2E_CORE_DIR}/src/interface/sils)
 
   #add subdirectory
-  set(BUILD_C2A_AS_CXX ON)
   add_subdirectory(${C2A_DIR} C2A)
 endif()
 
@@ -61,60 +60,21 @@ endif()
 include_directories(${CSPICE_DIR}/include)
 include_directories(${NRLMSISE00_DIR}/src)
 include_directories(${S2E_CORE_DIR}/src)
-include_directories(${S2E_CORE_DIR}/src/Library/math)
-include_directories(${S2E_CORE_DIR}/src/Library/utils)
-include_directories(${S2E_CORE_DIR}/src/Dynamics)
-include_directories(${S2E_CORE_DIR}/src/Disturbance)
-include_directories(${S2E_CORE_DIR}/src/Interface/InitInput)
-include_directories(${S2E_CORE_DIR}/src/Interface/LogOutput)
-include_directories(${S2E_CORE_DIR}/src/Interface/SpacecraftInOut/Ports)
-include_directories(${S2E_CORE_DIR}/src/Simulation)
-include_directories(${S2E_CORE_DIR}/src/Simulation/MCSim)
-include_directories(${S2E_CORE_DIR}/src/Simulation/Spacecraft)
-include_directories(${S2E_CORE_DIR}/src/Simulation/Spacecraft/Structure)
-include_directories(${S2E_CORE_DIR}/src/Simulation/GroundStation)
-include_directories(${S2E_CORE_DIR}/src/Simulation/Case)
-include_directories(${S2E_CORE_DIR}/src/Disturbance)
-include_directories(${S2E_CORE_DIR}/src/Environment/Global)
-include_directories(${S2E_CORE_DIR}/src/Environment/Local)
-include_directories(${S2E_CORE_DIR}/src/Component)
-include_directories(${S2E_CORE_DIR}/src/Component/Abstract)
-include_directories(${S2E_CORE_DIR}/src/Component/AOCS)
-include_directories(${S2E_CORE_DIR}/src/Component/CDH)
-include_directories(${S2E_CORE_DIR}/src/Component/CommGS)
-include_directories(${S2E_CORE_DIR}/src/Component/Mission/Telescope)
-include_directories(${S2E_CORE_DIR}/src/Component/Power)
-include_directories(${S2E_CORE_DIR}/src/Component/Propulsion)
-include_directories(${S2E_CORE_DIR}/src/Component/Thermal)
 
 ## add_subdirectories
-add_subdirectory(${S2E_CORE_DIR}/src/Component S2E_CORE/Component)
-add_subdirectory(${S2E_CORE_DIR}/src/Disturbance S2E_CORE/Disturbance)
-add_subdirectory(${S2E_CORE_DIR}/src/Dynamics S2E_CORE/Dynamics)
-add_subdirectory(${S2E_CORE_DIR}/src/Environment/Global S2E_CORE/Environment/Global)
-add_subdirectory(${S2E_CORE_DIR}/src/Environment/Local S2E_CORE/Environment/Local)
-add_subdirectory(${S2E_CORE_DIR}/src/RelativeInformation S2E_CORE/RelativeInformation)
-add_subdirectory(${S2E_CORE_DIR}/src/Interface/InitInput S2E_CORE/InitInput)
-add_subdirectory(${S2E_CORE_DIR}/src/Interface/LogOutput S2E_CORE/LogOutput)
-add_subdirectory(${S2E_CORE_DIR}/src/Interface/SpacecraftInOut S2E_CORE/SpacecraftInOut)
-add_subdirectory(${S2E_CORE_DIR}/src/Interface/HilsInOut S2E_CORE/HilsInOut)
-add_subdirectory(${S2E_CORE_DIR}/src/Library/igrf S2E_CORE/igrf)
-add_subdirectory(${S2E_CORE_DIR}/src/Library/inih S2E_CORE/inih)
-add_subdirectory(${S2E_CORE_DIR}/src/Library/math S2E_CORE/math)
-add_subdirectory(${S2E_CORE_DIR}/src/Library/nrlmsise00 S2E_CORE/nrlmsise00)
-add_subdirectory(${S2E_CORE_DIR}/src/Library/sgp4 S2E_CORE/sgp4)
-add_subdirectory(${S2E_CORE_DIR}/src/Library/utils S2E_CORE/utils)
-add_subdirectory(${S2E_CORE_DIR}/src/Library/optics S2E_CORE/optics)
-add_subdirectory(${S2E_CORE_DIR}/src/Library/RelativeOrbit S2E_CORE/RelativeOrbit)
-add_subdirectory(${S2E_CORE_DIR}/src/Library/Orbit S2E_CORE/Orbit)
-add_subdirectory(${S2E_CORE_DIR}/src/Library/Geodesy S2E_CORE/Geodesy)
-add_subdirectory(${S2E_CORE_DIR}/src/Simulation S2E_CORE/Simulation)
+add_subdirectory(${S2E_CORE_DIR}/src/components s2e_core/components)
+add_subdirectory(${S2E_CORE_DIR}/src/disturbances s2e_core/disturbances)
+add_subdirectory(${S2E_CORE_DIR}/src/dynamics s2e_core/dynamics)
+add_subdirectory(${S2E_CORE_DIR}/src/environment/global s2e_core/environment/global)
+add_subdirectory(${S2E_CORE_DIR}/src/environment/local s2e_core/environment/local)
+add_subdirectory(${S2E_CORE_DIR}/src/library s2e_core/library)
+add_subdirectory(${S2E_CORE_DIR}/src/simulation s2e_core/simulation)
 
 set(SOURCE_FILES
-  src/S2eUser.cpp
-  src/Simulation/Case/UserCase.cpp
-  src/Simulation/Spacecraft/UserSat.cpp
-  src/Simulation/Spacecraft/UserComponents.cpp
+  src/s2e_user.cpp
+  src/simulation/case/user_case.cpp
+  src/simulation/spacecraft/user_satellite.cpp
+  src/simulation/spacecraft/user_components.cpp
 )
 # Create executable file
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
@@ -122,21 +82,27 @@ add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 ## cspice library
 if(CYGWIN)
   SET (CMAKE_FIND_LIBRARY_SUFFIXES ".so" ".a")
-  find_library(CSPICE_LIB
-    NAMES cspice.a csupport.a
-    PATHS ${CSPICE_DIR}/cspice_cygwin/lib)
+  set(CSPICE_LIB_DIR ${CSPICE_DIR}/cspice_cygwin/lib)
 elseif(UNIX)
-  find_library(CSPICE_LIB
-    NAMES cspice.a csupport.a
-    PATHS ${CSPICE_DIR}/cspice_unix/lib)
-elseif(WIN32)
+  if(BUILD_64BIT)
+    set(CSPICE_LIB_DIR ${CSPICE_DIR}/cspice_unix64/lib)
+  else()
+    set(CSPICE_LIB_DIR ${CSPICE_DIR}/cspice_unix/lib)
+  endif()
+endif()
+
+if(WIN32)
   SET (CMAKE_FIND_LIBRARY_SUFFIXES ".lib")
   find_library(CSPICE_LIB
     NAMES cspice.lib csupport.lib
     PATHS ${CSPICE_DIR}/cspice_msvs/lib)
+else()
+  find_library(CSPICE_LIB
+    NAMES cspice.a csupport.a
+    PATHS ${CSPICE_LIB_DIR})
 endif()
 if(NOT CSPICE_LIB)
-  message(FATAL_ERROR "cspice not found in ${EXT_LIB_DIR}")
+  message(FATAL_ERROR "cspice not found in ${CSPICE_LIB_DIR}")
 endif()
 
 ## nrlmsise00 library
@@ -146,9 +112,15 @@ if(CYGWIN)
     NAMES libnrlmsise00.a
     PATHS ${NRLMSISE00_DIR}/lib)
 elseif(UNIX)
-  find_library(NRLMSISE00_LIB 
-    NAMES libnrlmsise00.a
-    PATHS ${NRLMSISE00_DIR}/lib)
+  if(BUILD_64BIT)
+    find_library(NRLMSISE00_LIB
+      NAMES libnrlmsise00.a
+      PATHS ${NRLMSISE00_DIR}/lib64)
+  else()
+    find_library(NRLMSISE00_LIB
+      NAMES libnrlmsise00.a
+      PATHS ${NRLMSISE00_DIR}/lib)
+  endif()
 elseif(WIN32)
   SET (CMAKE_FIND_LIBRARY_SUFFIXES ".lib")
   find_library(NRLMSISE00_LIB 
@@ -164,22 +136,19 @@ set(S2E_LIBRARIES
   IGRF WRAPPER_NRLMSISE00 INIH SGP4 UTIL OPTICS RELATIVE_ORBIT_MODELS ORBIT_MODELS GEODESY MATH
 )
 # Initialize link
-target_link_libraries(COMPONENT DYNAMICS GLOBAL_ENVIRONMENT LOCAL_ENVIRONMENT SC_IO RELATIVE_INFO ${S2E_LIBRARIES})
-target_link_libraries(DYNAMICS GLOBAL_ENVIRONMENT LOCAL_ENVIRONMENT SIMULATION ${S2E_LIBRARIES})
-target_link_libraries(DISTURBANCE DYNAMICS GLOBAL_ENVIRONMENT LOCAL_ENVIRONMENT ${S2E_LIBRARIES})
-target_link_libraries(SIMULATION DYNAMICS GLOBAL_ENVIRONMENT LOCAL_ENVIRONMENT DISTURBANCE ${S2E_LIBRARIES})
-target_link_libraries(GLOBAL_ENVIRONMENT ${CSPICE_LIB} ${S2E_LIBRARIES})
-target_link_libraries(LOCAL_ENVIRONMENT GLOBAL_ENVIRONMENT ${CSPICE_LIB} ${S2E_LIBRARIES})
-target_link_libraries(WRAPPER_NRLMSISE00 ${NRLMSISE00_LIB})
+target_link_libraries(COMPONENT DYNAMICS GLOBAL_ENVIRONMENT LOCAL_ENVIRONMENT LIBRARY)
+target_link_libraries(DYNAMICS GLOBAL_ENVIRONMENT LOCAL_ENVIRONMENT SIMULATION LIBRARY)
+target_link_libraries(DISTURBANCE DYNAMICS GLOBAL_ENVIRONMENT LOCAL_ENVIRONMENT LIBRARY)
+target_link_libraries(SIMULATION DYNAMICS GLOBAL_ENVIRONMENT LOCAL_ENVIRONMENT DISTURBANCE LIBRARY)
+target_link_libraries(GLOBAL_ENVIRONMENT ${CSPICE_LIB} LIBRARY)
+target_link_libraries(LOCAL_ENVIRONMENT GLOBAL_ENVIRONMENT ${CSPICE_LIB} LIBRARY)
+target_link_libraries(LIBRARY ${NRLMSISE00_LIB})
 
 target_link_libraries(${PROJECT_NAME} DYNAMICS)
 target_link_libraries(${PROJECT_NAME} DISTURBANCE)
 target_link_libraries(${PROJECT_NAME} SIMULATION)
 target_link_libraries(${PROJECT_NAME} GLOBAL_ENVIRONMENT LOCAL_ENVIRONMENT)
-target_link_libraries(${PROJECT_NAME} RELATIVE_INFO)
-target_link_libraries(${PROJECT_NAME} INI_ACC LOG_OUT SC_IO)
 target_link_libraries(${PROJECT_NAME} COMPONENT)
-target_link_libraries(${PROJECT_NAME} HILS_IO)
 
 ## C2A integration
 if(USE_C2A)
@@ -196,8 +165,6 @@ if(USE_HILS)
   set_target_properties(SIMULATION PROPERTIES COMMON_LANGUAGE_RUNTIME "")
   set_target_properties(GLOBAL_ENVIRONMENT PROPERTIES COMMON_LANGUAGE_RUNTIME "")
   set_target_properties(LOCAL_ENVIRONMENT PROPERTIES COMMON_LANGUAGE_RUNTIME "")
-  set_target_properties(HILS_IO PROPERTIES COMMON_LANGUAGE_RUNTIME "")
-  set_target_properties(RELATIVE_INFO PROPERTIES COMMON_LANGUAGE_RUNTIME "")
 endif()
 
 ## Cmake debug
