--- a/Tutorials/SampleCodes/control_algorithm/component_method_real/data/gyro_sensor_xxx.ini
+++ b/Tutorials/SampleCodes/control_algorithm/component_method_real/data/gyro_sensor_xxx.ini
@@ -1,49 +1,50 @@
-[GYRO]
+[GYRO_SENSOR_1]
 prescaler = 1
 
-// Transformation Quaternion from body frame to component frame
+// Quaternion from body frame to component frame
 // Including misalignment
-q_b2c(0) = 0.0
-q_b2c(1) = 0.0
-q_b2c(2) = 0.0
-q_b2c(3) = 1.0
+quaternion_b2c(0) = 0.0
+quaternion_b2c(1) = 0.0
+quaternion_b2c(2) = 0.0
+quaternion_b2c(3) = 1.0
 
-// Scale Factor matrix(3×3)
-// (0) = (0,0), (1) = (0,1), (2) = (0,2), ....
-ScaleFactor(0) = 1.0
-ScaleFactor(1) = 0.0
-ScaleFactor(2) = 0.0
-ScaleFactor(3) = 0.0
-ScaleFactor(4) = 1.0
-ScaleFactor(5) = 0.0
-ScaleFactor(6) = 0.0
-ScaleFactor(7) = 0.0
-ScaleFactor(8) = 1.0
+[SENSOR_BASE_GYRO_SENSOR_1]
+// Scale Factor Matrix (3×3)
+// (0) = (0,0), (1) = (0,1), (2) = (0,2), 
+scale_factor_c(0) = 1.0
+scale_factor_c(1) = 0.0
+scale_factor_c(2) = 0.0
+scale_factor_c(3) = 0.0
+scale_factor_c(4) = 1.0
+scale_factor_c(5) = 0.0
+scale_factor_c(6) = 0.0
+scale_factor_c(7) = 0.0
+scale_factor_c(8) = 1.0
 
-// Constant Bias Noise @ component frame[rad/s]
-Bias_c(0) = 0.001
-Bias_c(1) = 0.0
-Bias_c(2) = 0.0
+// Constant bias noise at component frame [rad/s]
+constant_bias_c_rad_s(0) = 1.0e-3
+constant_bias_c_rad_s(1) = -1.0e-3
+constant_bias_c_rad_s(2) = 2.0e-3
 
-// Random Walk Standard Deviation[rad/s]
-rw_stddev_c(0) = 0.001
-rw_stddev_c(1) = 0.0
-rw_stddev_c(2) = 0.0
+// Standard deviation for random walk noise[rad/s]
+random_walk_standard_deviation_c_rad_s(0) = 0.0
+random_walk_standard_deviation_c_rad_s(1) = 0.0
+random_walk_standard_deviation_c_rad_s(2) = 0.0
 
-// Random Walk Limit[rad/s]
-rw_limit_c(0) = 0.0
-rw_limit_c(1) = 0.0
-rw_limit_c(2) = 0.0
+// Limit of random walk noise[rad/s]
+random_walk_limit_c_rad_s(0) = 0.0
+random_walk_limit_c_rad_s(1) = 0.0
+random_walk_limit_c_rad_s(2) = 0.0
 
-//Standard Deviation of White noise[rad/s]
-nr_stddev_c(0) = 0.0
-nr_stddev_c(1) = 0.0
-nr_stddev_c(2) = 0.0
+// Standard deviation of normal random noise[rad/s]
+normal_random_standard_deviation_c_rad_s(0) = 0.0e-3
+normal_random_standard_deviation_c_rad_s(1) = 0.0e-3
+normal_random_standard_deviation_c_rad_s(2) = 0.0e-3
 
-//Measurement Range
-Range_to_const = 5.0  //should be smaller than Range_to_zero
-Range_to_zero = 10.0
+// Range [rad/s]
+range_to_constant_rad_s = 5.0  // smaller than Range_to_zero
+range_to_zero_rad_s = 10.0
 
-// Power Port
-minimum_voltage = 3.3 // V
-assumed_power_consumption = 1.0 //W
+[POWER_PORT]
+minimum_voltage_V = 3.3 // V
+assumed_power_consumption_W = 1.0 //W
